# Order_Matching_Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Include/: ExchangeSettings.h  Exchange_Settings.h  MarketParticipant.h  Market_Participant.h  Order.h  exchange_settings.h  market_participant.h
configs/: exchange_config.json
src/: Agent.h  ExchangeSettings.cpp  Exchange_Settings.cpp  MarketParticipant.cpp  Market_Participant.cpp  Order.cpp  Order.h  exchange_settings.cpp  main.cpp  market_participant.cpp
